<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/TextView.Title.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/see_map_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_24dp"
        android:paddingEnd="@dimen/space_24dp"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintVertical_bias="0.2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton1"
            style="@style/Button.Maps.UnPress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/btn_round_unpress"
            android:shadowColor="@color/tran00"
            android:text="@string/see_who_risk" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton2"
            style="@style/Button.Maps.Press"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12dp"
            android:layout_marginBottom="@dimen/space_12dp"
            android:layout_weight="0.25"
            android:background="@drawable/btn_round_press"
            android:shadowColor="@color/tran00"
            android:text="@string/see_who_infected" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton3"
            style="@style/Button.Maps.UnPress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/btn_round_unpress"
            android:shadowColor="@color/tran00"
            android:text="@string/see_who_both" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>