<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/true_medium"
        android:text="@string/update_location_title"
        android:textSize="@dimen/text_headline_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        style="@style/TextView.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_location_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintVertical_bias="0.04" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginBottom="@dimen/space_12dp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/space_32dp"
            android:paddingBottom="@dimen/space_32dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_circular" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/updateLocationCheckMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_asset_checked" />

        <TextView
            android:id="@+id/updateLocationResult"
            style="@style/TextView.Desc.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updateLocationCheckMark"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_10dp"
            android:gravity="center"
            android:paddingStart="@dimen/space_52dp"
            android:paddingEnd="@dimen/space_52dp"
            android:text="@string/update_location_mock"
            android:textSize="@dimen/text_body_1" />

        <TextView
            style="@style/TextView.Underline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/updateLocationResult"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/update_location_success_message"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginBottom="@dimen/space_12dp"
        android:background="@drawable/btn_blue_gradient"
        android:fontFamily="@font/true_bold"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_headline_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>