<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/input_date_of_risk"
        android:textSize="@dimen/text_headline_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.015" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        >

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarQuarantine"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            app:mcv_selectionColor="#00F"
            app:mcv_selectionMode="multiple"
            app:mcv_showOtherDates="all" />
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_24dp"
        android:paddingEnd="@dimen/space_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.55">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/locationTitle"
            style="@style/TextView.Title.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/get_location_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/locationDesc"
            style="@style/TextView.Desc.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/locationTitle"
            android:layout_alignParentStart="true"
            android:text="@string/get_location_desc" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/space_24dp"
        android:paddingEnd="@dimen/space_24dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/btnAcceptGetLocation"
            android:layout_width="32dp"
            android:layout_height="@dimen/space_32dp"
            android:background="@drawable/custom_radio"
            android:gravity="center"
            android:textOff=""
            android:textOn="" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView.Title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="start|center"
            android:paddingStart="@dimen/space_12dp"
            android:paddingEnd="@dimen/space_12dp"
            android:text="@string/accecpt_get_location"
            android:textSize="@dimen/text_title" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingStart="@dimen/space_32dp"
        android:paddingEnd="@dimen/space_32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSafeLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray_gradient"
            android:fontFamily="@font/true_bold"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/text_headline_6" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>